test-suite/cases/eure-schema-to-json-schema/errors/circular-reference.eure
// Test error: Type that references itself directly

schema = ```eure
= `$types.Node`

@ $types.Node {
    value = `integer`
    next = `$types.Node`
}
```

json_schema_errors[] = "cycle"
